# streamlit-cookies-manager

./: .gitignore  MANIFEST.in  Makefile  README.md  example.py  pyproject.toml  upload.sh
streamlit_cookies_manager/: __init__.py  cookie_manager.py  encrypted_cookie_manager.py  package-lock.json  package.json
streamlit_cookies_manager/public/: index.html
streamlit_cookies_manager/src/: index.ts
