[tool.poetry]
name = "streamlit-cookies-manager"
version = "0.1.1"
description = "Access and save cookies from Streamlit"
authors = ["Tomasz Kontusz <tomasz.kontusz@gmail.com>"]
license = "Apache-2.0"

readme = "README.md"

include = [
    "streamlit_cookies_manager/build/**/*",
]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = ">0.63"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
